Update header to include full name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tzipporah Harker</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Tzipi Harker [t͡sɪpi hɑɹkɝ]</h1>
     <p>Party like it's 3012 2nite</p>
   </body>
 </html>
