Modify profile window and background styles
Updated profile information and adjusted layout styles.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ body {
 
     background-image: url('https://i.pinimg.com/736x/09/c4/8e/09c48e721d23978d1818871830e88476.jpg');
     background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed;
+    background-repeat:repeat;
+    background-attachment: scroll;
 }
 
 /* Links */
@@ -77,12 +77,12 @@ a:hover {
 /* Profile window */
 #profile {
     position: absolute;
-    top: 150px;
-    left: 850px;
+    top: 100px;
+    left: 900px;
     width: 300px;
     height: 216px;
     background-position: -336px -238px;
-    color: white;
+    color: black;
 }
 
 .pro-title {
@@ -145,23 +145,23 @@ a:hover {
 <div id="menu">
     <div class="icon">
         <div class="myComputer"></div>
-        <div class="label">My Computer</div>
+        <div class="label">About Me</div>
     </div>
 
     <div class="icon">
         <a href="about.html">
             <div class="pageImage"></div>
-            <div class="label">About</div>
+            <div class="label">Projects</div>
         </a>
     </div>
 </div>
 
 <!-- Profile window -->
 <div id="profile">
-    <div class="pro-title">Tzipi Harker</div>
+    <div class="pro-title">Tzipi Harker [t͡sɪpi hɑɹkɝ]</div>
     <div class="pro-description">
-        This is a GitHub Pages version of a Windows XP–style site.<br><br>
-        You can put your bio, links, or anything here.
+        Hi! I'm a senior at the University of Maryland studying Linguistics and Communication disorders. 
+        Contact: tzipporahharker@gmail.com
     </div>
 </div>
 
